[tool.poetry]
name = "subpackage-ba2"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
subpackage-a = {path = "subpackage_ba2/pkgs/subpakcage-a"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
